package com.github.studeasy.logic.common;

import java.util.*;

/**
 * 
 */
public class Partner extends User {

	/**
	 * Default constructor
	 */
	public Partner() {
	}

	/**
	 * 
	 */
	private String company;



	/**
	 * @return
	 */
	public String getCompany() {
		// TODO implement here
		return "";
	}

	/**
	 * @param c
	 */
	public void setCompany(String c) {
		// TODO implement here
	}

}